<resources>
    <string name="app_name">코로나 발자국</string>
    <string name="tab_statistics">통계</string>
    <string name="tab_map">코로나맵</string>
    <string name="tab_info">관련기사</string>
    <string name="tab_web">선별진료소</string>

    <string name="fail_get_firebase">데이터를 불러올 수 없습니다.</string>
    <string name="fail_network">네트워크 연결을 확인해주세요.</string>

    <string name="main_subTitle">신종 코로나 바이러스, 우한 폐렴</string>
    <string name="statistics_subTitle1">국내 확진환자</string>
    <string name="statistics_subTitle2">국내 사망자</string>
    <string name="statistics_subTitle3">세계 확진환자</string>
    <string name="statistics_subTitle4">세계 사망자</string>
    <string name="statistics_subTitle5">발생 국가</string>
    <string name="statistics_subTitle6">조사 대상 유증상자 (국내)</string>
    <string name="statistics_subTitle7">격리 해제</string>
    <string name="statistics_subTitle8">검사중</string>
    <string name="statistics_subTitle9">국내 완치자</string>
    <string name="statistics_subTitle10">세계 완치자</string>

    <string name="counters_person">명</string>
    <string name="counters_country">개국</string>

    <string name="korea_disease_btn_title">질병관리본부 바로가기</string>
    <string name="korea_disease_url">http://ncov.mohw.go.kr/index_main.jsp</string>

    <string name="api_key">AIzaSyDHvpK7YjTjxyI4NL24RXTEHjdcIpkybvk</string>
    <string name="admob_app_id">ca-app-pub-5497763693278680~1827766346</string>
    <string name="front_ad_unit_id">ca-app-pub-5497763693278680/1234855506</string>
    <!--    <string name="banner_ad_unit_id">ca-app-pub-5497763693278680/9131541296</string>-->
    <!--    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>-->
</resources>
