<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.god.taeiim.koreacoronavirus.ui.statistics.CoronaStatisticsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:text="@={vm.titleMsg}"
                android:textColor="@color/darkBlue"
                android:textSize="24sp"
                tools:text="info" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:text="@string/main_subTitle"
            android:textColor="@color/darkNavy"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_e0e0e0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom">

                        <TextView
                            style="@style/CountRedBigTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            bind:textInt="@{vm.koreaConfirmatorCnt}"
                            tools:text="15" />

                        <TextView
                            style="@style/serveSmallTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/counters_person" />
                    </LinearLayout>

                    <TextView
                        style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/statistics_subTitle1" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_f0f0f0"
                    android:visibility="@{vm.coronaStatistics.koreaDieCnt == 0 ? View.GONE : View.VISIBLE}"
                    tools:visibility="visible" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="@{vm.koreaDieCnt == 0 ? View.GONE : View.VISIBLE}"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom">

                        <TextView
                            style="@style/CountRedBigTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            bind:textInt="@{vm.koreaDieCnt}"
                            tools:text="2" />

                        <TextView
                            style="@style/serveSmallTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/counters_person" />
                    </LinearLayout>

                    <TextView
                        style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/statistics_subTitle2" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_f0f0f0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom">

                        <TextView
                            style="@style/CountBlackBigTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            bind:textInt="@{vm.worldConfirmatorCnt}"
                            tools:text="45,200" />

                        <TextView
                            style="@style/serveSmallTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/counters_person" />
                    </LinearLayout>

                    <TextView
                        style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/statistics_subTitle3" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_f0f0f0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom">

                        <TextView
                            style="@style/CountBlackBigTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            bind:textInt="@{vm.worldDieCnt}"
                            tools:text="24" />

                        <TextView
                            style="@style/serveSmallTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/counters_person" />
                    </LinearLayout>

                    <TextView
                        style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/statistics_subTitle4" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_f0f0f0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="32dp"
                    android:layout_weight="1"
                    android:text="@string/statistics_subTitle5" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        bind:textInt="@{vm.coronaCountryCnt}"
                        tools:text="27" />

                    <TextView
                        style="@style/serveSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/counters_country" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray_e0e0e0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_e0e0e0" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center">

                <TextView
                    style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/statistics_subTitle6" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        bind:textInt="@{vm.koreaSymptomCnt}"
                        tools:text="427" />

                    <TextView
                        style="@style/serveSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/counters_person" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_f0f0f0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom">

                        <TextView
                            style="@style/CountBlackBigTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            bind:textInt="@{vm.koreaCancelIsolationCnt}"
                            tools:text="220" />

                        <TextView
                            style="@style/serveSmallTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/counters_person" />
                    </LinearLayout>

                    <TextView
                        style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/statistics_subTitle7" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_f0f0f0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom">

                        <TextView
                            style="@style/CountBlackBigTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            bind:textInt="@{vm.koreaIsolationCnt}"
                            tools:text="70" />

                        <TextView
                            style="@style/serveSmallTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/counters_person" />
                    </LinearLayout>

                    <TextView
                        style="@style/smallTextViewStyle.CountBlackSmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/statistics_subTitle8" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_e0e0e0" />

            <TextView
                style="@style/serveSmallTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:paddingBottom="2dp"
                android:text="@{vm.updateTime}"
                tools:text="(2월 2일 오전 9시 기준, 출처: 질병관리본부)" />
        </LinearLayout>


    </LinearLayout>
</layout>